--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="tickets_amount">Tickets Amount</string>
     <string name="rs_1_500_00">Rs.1,500.00</string>
     <string name="movie">Movie</string>
+    <string name="book_now">Book now</string>
 
 </resources>
