--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,7 @@
     <string name="rs_1_500_00">Rs.1,500.00</string>
     <string name="movie">Movie</string>
     <string name="book_now">Book now</string>
+    <string name="civil_war">Civil War</string>
+    <string name="_29_09_2020_at_12_00_pm">29/09/2020 at 12:00 pm</string>
 
 </resources>
